--- a/app/src/main/res/layout/fragment_month_card_front.xml
+++ b/app/src/main/res/layout/fragment_month_card_front.xml
@@ -25,8 +25,7 @@
                 android:id="@+id/ivBackground"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scaleType="centerCrop"
-                android:src="@drawable/bg_jun" />
+                android:scaleType="centerCrop"/>
 
             <View
                 android:layout_width="match_parent"
