--- a/app/src/main/res/layout/fragment_month_card.xml
+++ b/app/src/main/res/layout/fragment_month_card.xml
@@ -4,9 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/vpMonthCard"
+    <com.cleanarchitectkotlinflowhiltsimplestway.utils.FlipMonthView
         android:layout_width="match_parent"
+        android:id="@+id/flipMonthView"
         android:layout_height="match_parent"/>
 
 
