--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -53,7 +53,7 @@
                 <TextView
                     style="@style/SettingItem"
                     android:text="@string/export"
-                    android:visibility="gone" />
+                    android:visibility="visible" />
 
                 <TextView
                     android:id="@+id/tvClearData"
