Add folder picker for exporting - export DB to json file

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -51,6 +51,7 @@
                     android:visibility="gone" />
 
                 <TextView
+                    android:id="@+id/tvExport"
                     style="@style/SettingItem"
                     android:text="@string/export"
                     android:visibility="visible" />
