--- a/app/src/main/res/layout/fragment_month_posts.xml
+++ b/app/src/main/res/layout/fragment_month_posts.xml
@@ -19,6 +19,14 @@
             app:srcCompat="@drawable/ic_diary_back"
             app:tint="@color/tool_bar_item_create" />
 
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/ivWritePost"
+            style="@style/ToolBarIcon"
+            android:layout_alignParentEnd="true"
+            android:padding="@dimen/_12sdp"
+            app:srcCompat="@drawable/ic_add_diary_image"
+            app:tint="@color/tool_bar_item_create" />
+
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvTitle"
             android:layout_width="wrap_content"
@@ -45,5 +53,6 @@
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
