--- a/app/src/main/res/layout/layout_empty_dataset.xml
+++ b/app/src/main/res/layout/layout_empty_dataset.xml
@@ -16,6 +16,7 @@
         android:layout_height="wrap_content"/>
 
     <TextView
+        android:id="@+id/tvMessage"
         android:fontFamily="@font/quicksand_bold"
         android:alpha="0.3"
         android:textSize="17sp"
