--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <androidx.appcompat.widget.LinearLayoutCompat
@@ -85,6 +86,20 @@
                 <View
                     style="@style/SettingDivider"
                     android:visibility="gone" />
+
+                <TextView
+                    style="@style/SettingHeader"
+                    android:paddingVertical="@dimen/_10sdp"
+                    android:text="@string/privacy" />
+
+                <TextView
+                    android:id="@+id/ivSetupPassword"
+                    style="@style/SettingItem"
+                    android:text="@string/setup_unlock_pattern" />
+
+                <View
+                    style="@style/SettingDivider"
+                    android:visibility="visible" />
 
                 <TextView
                     style="@style/SettingHeader"
